# cppao

./: BuildInstructions.md  CMakeLists.txt  FineTuning.md  ProjectHome.md  Reference.md  Samples.md  Tutorial.md  bench2.cpp
ActiveObjectVS11/: ActiveObjectVS11.sln
ActiveObjectVS11/ActiveSocket/: ActiveSocket.vcxproj
ActiveObjectVS11/Bench/: Bench.vcxproj
ActiveObjectVS11/Bench2/: Bench2.vcxproj
ActiveObjectVS11/BenchLambda/: BenchLambda.vcxproj
ActiveObjectVS11/Echo/: Echo.vcxproj
ActiveObjectVS11/EchoClient/: EchoClient.vcxproj
ActiveObjectVS11/EchoServer/: EchoServer.vcxproj
ActiveObjectVS11/FibLambda/: FibLambda.vcxproj
ActiveObjectVS11/ForwardResult/: ForwardResult.vcxproj
ActiveObjectVS11/ForwardResultIface/: ForwardResultIface.vcxproj
ActiveObjectVS11/ForwardResultIfaceLambda/: ForwardResultIfaceLambda.cpp.vcxproj
ActiveObjectVS11/ForwardResultLambda/: ForwardResultLambda.vcxproj
ActiveObjectVS11/ForwardResultSink/: ForwardResultSink.vcxproj
ActiveObjectVS11/ForwardResultSinkLambda/: ForwardResultSinkLambda.vcxproj
ActiveObjectVS11/Future/: Future.vcxproj
ActiveObjectVS11/HelloWorld/: HelloWorld.vcxproj
ActiveObjectVS11/HelloWorldLambda/: HelloWorldLambda.vcxproj
ActiveObjectVS11/Lib/: Lib.vcxproj
ActiveObjectVS11/Life/: Life.vcxproj
ActiveObjectVS11/PingPong/: PingPong.vcxproj
ActiveObjectVS11/PingPongLambda/: PingPongLambda.vcxproj
ActiveObjectVS11/QueueControl/: QueueControl.vcxproj
ActiveObjectVS11/QueueControlLambda/: QueueControlLambda.vcxproj
ActiveObjectVS11/ReturnResult/: ReturnResult.vcxproj
ActiveObjectVS11/RoundRobin/: RoundRobin.vcxproj
ActiveObjectVS11/RoundRobinLambda/: RoundRobinLambda.vcxproj
ActiveObjectVS11/Sieve/: Sieve.vcxproj
ActiveObjectVS11/Sieve2/: Sieve2.vcxproj
ActiveObjectVS11/SieveLambda/: SieveLambda.vcxproj
ActiveObjectVS11/Tests/: Tests.vcxproj
ActiveObjectVS11/include/active/: config.hpp
bench/: bench.cpp
include/active/: advanced.hpp  atomic_node.hpp  config.hpp.in  direct.hpp  fast.hpp  fifo.hpp  object.hpp  promise.hpp  scheduler.hpp  separate.hpp  shared.hpp  synchronous.hpp  thread.hpp
lib/: CMakeLists.txt  active_object.cpp  active_object.hpp  atomic.cpp
samples/: CMakeLists.txt  active_socket.cpp  active_socket.hpp  bench.cpp  bench_fib.cpp  bench_lambda.cpp  echo.cpp  echo_client.cpp  echo_server.cpp  exception.cpp  fib.cpp  fib_lambda.cpp  fifo.cpp  fifo2.cpp  forward_result.cpp  forward_result_iface.cpp  forward_result_iface_lambda.cpp  forward_result_lambda.cpp  forward_result_sink.cpp  forward_result_sink_lambda.cpp  future.cpp  future_lambda.cpp  hello_active.cpp  hello_active_lambda.cpp  life.cpp  life.hpp  mandelbrot.cpp  mandelbrot.hpp  object_types.cpp  philosophers.cpp  ping_pong.cpp  queue_control.cpp  queue_control_lambda.cpp  return_result.cpp  round_robin.cpp  round_robin_lambda.cpp  santa.cpp  sieve.cpp  sieve2.cpp  sieve2_lambda.cpp  (+1 more)
tests/: CMakeLists.txt  active_tests.cpp  bench2.cpp  bench_atomic.cpp  test_atomic.cpp
trunk/: CMakeLists.txt  README.txt
trunk/ActiveObjectVS11/: ActiveObjectVS11.sln
trunk/ActiveObjectVS11/ActiveSocket/: ActiveSocket.vcxproj
trunk/ActiveObjectVS11/Bench/: Bench.vcxproj
trunk/ActiveObjectVS11/Bench2/: Bench2.vcxproj
trunk/ActiveObjectVS11/Echo/: Echo.vcxproj
trunk/ActiveObjectVS11/EchoClient/: EchoClient.vcxproj
trunk/ActiveObjectVS11/EchoServer/: EchoServer.vcxproj
trunk/ActiveObjectVS11/Fib/: Fib.vcxproj
trunk/ActiveObjectVS11/ForwardResult/: ForwardResult.vcxproj
trunk/ActiveObjectVS11/ForwardResultIface/: ForwardResultIface.vcxproj
trunk/ActiveObjectVS11/ForwardResultLambda/: ForwardResultLambda.vcxproj
trunk/ActiveObjectVS11/ForwardResultSink/: ForwardResultSink.vcxproj
trunk/ActiveObjectVS11/ForwardResultSinkLambda/: ForwardResultSinkLambda.vcxproj
trunk/ActiveObjectVS11/Future/: Future.vcxproj
trunk/ActiveObjectVS11/FutureLambda/: FutureLambda.vcxproj
trunk/ActiveObjectVS11/HelloWorld/: HelloWorld.vcxproj
trunk/ActiveObjectVS11/Lib/: Lib.vcxproj
trunk/ActiveObjectVS11/Life/: Life.vcxproj
trunk/ActiveObjectVS11/PingPong/: PingPong.vcxproj
trunk/ActiveObjectVS11/PingPongLambda/: PingPongLambda.vcxproj
trunk/ActiveObjectVS11/QueueControlLambda/: QueueControlLambda.vcxproj
trunk/ActiveObjectVS11/RoundRobin/: RoundRobin.vcxproj
trunk/ActiveObjectVS11/RoundRobinLambda/: RoundRobinLambda.vcxproj
trunk/ActiveObjectVS11/Sieve/: Sieve.vcxproj
trunk/ActiveObjectVS11/Sieve2/: Sieve2.vcxproj
trunk/ActiveObjectVS11/Sieve2Lambda/: Sieve2Lambda.vcxproj
trunk/ActiveObjectVS11/Tests/: Tests.vcxproj
trunk/bench/: CMakeLists.txt  bench.cpp
trunk/include/active/: advanced.hpp  atomic_fifo.hpp  atomic_lifo.hpp  config.hpp.in  direct.hpp  fast.hpp  fifo.hpp  object.hpp  promise.hpp  scheduler.hpp  separate.hpp  shared.hpp  sink.hpp  synchronous.hpp  thread.hpp
trunk/lib/: CMakeLists.txt  active_object.cpp  active_object.hpp  atomic.cpp
trunk/samples/: CMakeLists.txt  active_socket.cpp  active_socket.hpp  bench.cpp  bench_fib.cpp  bench_lambda.cpp  echo.cpp  echo_client.cpp  echo_server.cpp  exception.cpp  fib.cpp  fib_lambda.cpp  fifo.cpp  fifo2.cpp  forward_result.cpp  forward_result_iface.cpp  forward_result_lambda.cpp  forward_result_sink.cpp  forward_result_sink_lambda.cpp  future.cpp  future_lambda.cpp  hello_active.cpp  hello_active_lambda.cpp  life.cpp  life.hpp  mandelbrot.cpp  mandelbrot.hpp  object_types.cpp  philosophers.cpp  ping_pong.cpp  ping_pong_lambda.cpp  queue_control.cpp  queue_control_lambda.cpp  return_result.cpp  round_robin.cpp  round_robin_lambda.cpp  shootout.cpp  sieve.cpp  sieve2.cpp  sieve2_lambda.cpp  (+1 more)
trunk/tests/: CMakeLists.txt  active_tests.cpp  bench_atomic.cpp  test_atomic.cpp  test_fifo.cpp
wiki/: BuildInstructions.wiki  FineTuning.wiki  Reference.wiki  Samples.wiki  Tutorial.wiki
